--- a/advocacy_docs/community/contribute/index.mdx
+++ b/advocacy_docs/community/contribute/index.mdx
@@ -3,7 +3,7 @@ title: Contribute
 description: Guidelines for contributing to EDB Docs.
 ---
 
-*Note: per [Github convention](https://help.github.com/en/github/building-a-strong-community/setting-guidelines-for-repository-contributors), this content may move this project to a CONTRIBUTING.md file in this project's root directory.*
+*Note: per [Github convention](https://help.github.com/en/github/building-a-strong-community/setting-guidelines-for-repository-contributors), this content may move to a CONTRIBUTING.md file in this project's root directory.*
 
 Got information that'd useful as a part of these docs? A link that's relevant to a topic here? An idea for a demo? Spot something that could be improved? We welcome all contributors!
 
